[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse-dock-openenv"
version = "0.1.0"
description = "Warehouse dock scheduling RL environment for OpenEnv validation"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "openenv-core>=0.2.0",
  "openai>=2.30.0",
  "numpy>=2.2.6",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["src*"]
